--- a/main.css
+++ b/main.css
@@ -19,14 +19,15 @@ body {
 #title {
 	font-size: 3em;
 	margin-top: 10px;
-	font-family: Montserrat, Serif;
+	font-family: 'Montserrat', serif;
 	color: Black;
-	background-color: rgb(238,130,238, 0.9);
+	background-color: rgb(238,130,238, 0.95);
 	border-radius: 10px;
+	border: 2px dotted black;
 }
 
 #secondRow {
-	margin-top: 100px;
+	margin-top: 80px;
 	padding: 5px;
 	display: flex;
 	justify-content: center;
@@ -36,14 +37,8 @@ body {
 	margin: auto 5%;
 }
 
-#mainPic {
-	/* border: 2px solid black;
-	margin-right: 10%; */
-}
-
 #smile {
-	border: 2px solid black;
-	width: 70%;
+	width: 50%;
 	border-radius: 25%;
 }
 
@@ -52,10 +47,43 @@ body {
 }
 
 #reasons li {
-	font-size: 1.4em;
-	font-family: Montserrat, Serif;
+	font-size: 1.6em;
+	font-family: 'Raleway', sans-serif;
 	background-color: rgb(238,130,238);
 	border-radius: 10px;
 	padding: 5px;
 	text-align: center;
+	border: 2px dotted black;
+	margin: 5px auto;
 }
+
+#thirdRow {
+	margin-top: 65px;
+}
+
+.card3 {
+	border: 2px dotted black;
+	border-radius: 20px;
+	text-align: center;
+	background-color: rgb(238,130,238, 0.95);
+	padding-top: 10px;
+	font-size: 1.6em;
+	font-family: 'Raleway', sans-serif;
+}
+
+#history {
+	list-style: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
