--- a/main.css
+++ b/main.css
@@ -90,9 +90,16 @@ body {
 	font-size: 1.5em;
 	border-radius: 15px;
 	padding: 5px;
+	outline: none;
 }
 
+#form {
+	list-style: none;
+}
 
+.hidden {
+	display: none;
+}
 
 
 
